First cut at map property encoder