@@ -5,9 +5,12 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.BitSet;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.SequencedCollection;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.maplibre.mlt.converter.CollectionUtils;
@@ -28,48 +31,53 @@ import org.maplibre.mlt.util.StreamUtil;
 public class PropertyEncoder {
 
   public static ArrayList<byte[]> encodePropertyColumns(
-      SequencedCollection<MltMetadata.Column> propertyColumns,
-      SequencedCollection<Feature> features,
-      boolean useFastPFOR,
-      boolean useFSST,
-      boolean coercePropertyValues,
-      @Nullable SequencedCollection<ColumnMapping> columnMappings,
-      @NotNull ConversionConfig.IntegerEncodingOption integerEncodingOption)
-      throws IOException {
+          SequencedCollection<MltMetadata.Column> propertyColumns,
+          SequencedCollection<Feature> features,
+          boolean useFastPFOR,
+          boolean useFSST,
+          boolean coercePropertyValues,
+          @Nullable SequencedCollection<ColumnMapping> columnMappings,
+          @NotNull ConversionConfig.IntegerEncodingOption integerEncodingOption)
+          throws IOException {
     /*
      * TODOs: - detect if column is nullable to get rid of the present stream - test boolean rle
      * against roaring bitmaps and integer encoding for present stream and boolean values - Add
      * vector type to field metadata
      */
     final var physicalLevelTechnique =
-        useFastPFOR ? PhysicalLevelTechnique.FAST_PFOR : PhysicalLevelTechnique.VARINT;
+            useFastPFOR ? PhysicalLevelTechnique.FAST_PFOR : PhysicalLevelTechnique.VARINT;
     final var estimatedBuffers = propertyColumns.size() * 5;
     final var featureScopedPropertyColumns = new ArrayList<byte[]>(estimatedBuffers);
 
-    final var columnMappingsIterator = columnMappings.iterator();
+    Iterator<ColumnMapping> columnMappingsIterator = null;
     for (var columnMetadata : propertyColumns) {
       final ArrayList<byte[]> encodedColumn;
       if (columnMetadata.isScalar()) {
         encodedColumn =
-            encodeScalarPropertyColumn(
-                features,
-                useFSST,
-                coercePropertyValues,
-                columnMetadata,
-                physicalLevelTechnique,
-                integerEncodingOption);
+                encodeScalarPropertyColumn(
+                        features,
+                        useFSST,
+                        coercePropertyValues,
+                        columnMetadata,
+                        physicalLevelTechnique,
+                        integerEncodingOption);
+      } else if (columnMetadata.is(MltMetadata.ComplexType.MAP)) {
+        encodedColumn = encodeMapPropertyColumn(features, useFSST, columnMetadata, physicalLevelTechnique, integerEncodingOption);
       } else if (MltTypeMap.Tag0x01.isStruct(columnMetadata)) {
-        if (!columnMappingsIterator.hasNext()) {
+        if (columnMappingsIterator == null && columnMappings != null) {
+          columnMappingsIterator = columnMappings.iterator();
+        }
+        if (columnMappingsIterator == null || !columnMappingsIterator.hasNext()) {
           throw new IllegalArgumentException(
-              "Missing column mapping for nested property column " + columnMetadata.getName());
+                  "Missing column mapping for nested property column " + columnMetadata.getName());
         }
         final var columnMapping = columnMappingsIterator.next();
         encodedColumn =
-            encodeStructPropertyColumn(
-                features, useFSST, columnMetadata, columnMapping, physicalLevelTechnique);
+                encodeStructPropertyColumn(
+                        features, useFSST, columnMetadata, columnMapping, physicalLevelTechnique);
       } else {
         throw new IllegalArgumentException(
-            "The specified data type for the field is currently not supported: " + columnMetadata);
+                "The specified data type for the field is currently not supported: " + columnMetadata);
       }
 
       featureScopedPropertyColumns.addAll(encodedColumn);
@@ -129,7 +137,7 @@ public class PropertyEncoder {
     if (sharedDictionary.stream().allMatch(List::isEmpty)) {
       // Set number of streams to zero if no property values are present in this tile
       // TODO: Can we skip the column entirely in this case?
-      return new ArrayList<>(Arrays.asList(new byte[] {0}));
+      return new ArrayList<>(List.of(new byte[]{0}));
     }
     final var nestedColumns =
         StringEncoder.encodeSharedDictionary(sharedDictionary, physicalLevelTechnique, useFSST);
@@ -155,7 +163,7 @@ public class PropertyEncoder {
         && features.stream().noneMatch(f -> f.findProperty(columnMetadata.getName()).isPresent())) {
       // Indicate a missing property column in the tile with a zero for the number of streams
       // TODO: Can we skip the column entirely in this case?
-      return new ArrayList<>(Arrays.asList(new byte[] {0}));
+      return new ArrayList<>(List.of(new byte[]{0}));
     }
 
     return encodeScalarPropertyColumn(
@@ -168,7 +176,7 @@ public class PropertyEncoder {
         integerEncodingOption);
   }
 
-  private static Boolean getBooleanPropertyValue(@NotNull Feature feature, @NotNull String name) {
+  private static @Nullable Boolean getBooleanPropertyValue(@NotNull Feature feature, @NotNull String name) {
     return feature
         .findProperty(name)
         .filter(p -> p.getType().is(MltMetadata.ScalarType.BOOLEAN))
@@ -245,7 +253,7 @@ public class PropertyEncoder {
         .orElse(null);
   }
 
-  private static Float getFloatPropertyValue(@NotNull Feature feature, @NotNull String name) {
+  private static @Nullable Float getFloatPropertyValue(@NotNull Feature feature, @NotNull String name) {
     final var index = feature.getIndex();
     return feature
         .findProperty(name)
@@ -263,7 +271,7 @@ public class PropertyEncoder {
         .orElse(null);
   }
 
-  private static Double getDoublePropertyValue(@NotNull Feature feature, @NotNull String name) {
+  private static @Nullable Double getDoublePropertyValue(@NotNull Feature feature, @NotNull String name) {
     final var index = feature.getIndex();
     return feature
         .findProperty(name)
@@ -364,8 +372,8 @@ public class PropertyEncoder {
     final ArrayList<byte[]> presentStream;
     if (columnMetadata.isNullable()) {
       final var presentValues =
-          Arrays.stream(rawStringValues).map(Objects::nonNull).toArray(Boolean[]::new);
-      presentStream = BooleanEncoder.encodeBooleanStream(presentValues, PhysicalStreamType.PRESENT);
+          Arrays.stream(rawStringValues).map(Objects::nonNull);
+      presentStream = BooleanEncoder.encodeBooleanStream(rawStringValues.length, presentValues::iterator, PhysicalStreamType.PRESENT);
     } else {
       presentStream = new ArrayList<>();
     }
@@ -440,7 +448,7 @@ public class PropertyEncoder {
   private static ArrayList<byte[]> encodeFloatColumn(
       SequencedCollection<Feature> features, MltMetadata.Column metadata) throws IOException {
     final var values = new ArrayList<Float>(features.size());
-    final var presentValues = metadata.isNullable() ? new Boolean[features.size()] : null;
+    final var presentValues = metadata.isNullable() ? new boolean[features.size()] : null;
     var presentIndex = 0;
     for (var feature : features) {
       final var propertyValue = getFloatPropertyValue(feature, metadata.getName());
@@ -467,7 +475,7 @@ public class PropertyEncoder {
   private static ArrayList<byte[]> encodeDoubleColumn(
       SequencedCollection<Feature> features, MltMetadata.Column metadata) throws IOException {
     final var values = new ArrayList<Double>(features.size());
-    final var presentValues = metadata.isNullable() ? new Boolean[features.size()] : null;
+    final var presentValues = metadata.isNullable() ? new boolean[features.size()] : null;
     var presentIndex = 0;
     for (var feature : features) {
       final var propertyValue = getDoublePropertyValue(feature, metadata.getName());
@@ -500,14 +508,14 @@ public class PropertyEncoder {
       @NotNull ConversionConfig.IntegerEncodingOption integerEncodingOption)
       throws IOException {
     final var values = new ArrayList<Integer>(features.size());
-    final var presentValues = metadata.isNullable() ? new Boolean[features.size()] : null;
+    final var presentValues = metadata.isNullable() ? new boolean[features.size()] : null;
     var presentIndex = 0;
     for (var feature : features) {
       // Force ID values to integer for this column.
       // If long were required, `encodeInt64Column` would have been called instead.
       final var propertyValue =
           isID
-              ? (feature.hasId() ? Integer.valueOf(Math.toIntExact(feature.getId())) : null)
+              ? (feature.hasId() ? Math.toIntExact(feature.getId()) : null)
               : getIntPropertyValue(feature, metadata.getName());
       final var present = (propertyValue != null);
       if (present) {
@@ -549,7 +557,7 @@ public class PropertyEncoder {
       @NotNull ConversionConfig.IntegerEncodingOption integerEncodingOption)
       throws IOException {
     final var values = new ArrayList<Long>(features.size());
-    final var presentValues = metadata.isNullable() ? new Boolean[features.size()] : null;
+    final var presentValues = metadata.isNullable() ? new boolean[features.size()] : null;
     var presentIndex = 0;
     for (var feature : features) {
       final var propertyValue =
@@ -579,5 +587,408 @@ public class PropertyEncoder {
       result.addAll(0, encodedPresentStream);
     }
     return result;
+  }
+
+  private static ArrayList<byte[]> encodeMapPropertyColumn(
+          SequencedCollection<Feature> features,
+          boolean useFSST,
+          MltMetadata.Column columnMetadata,
+          PhysicalLevelTechnique physicalLevelTechnique,
+          @NotNull ConversionConfig.IntegerEncodingOption encodingOption)
+          throws IOException {
+
+    final var columnName = columnMetadata.getName();
+    final var uniqueValues = new UniqueMapValues();
+
+    // Recursively gather all unique leaf values from nested fields,
+    // grouped by type, with one list of values for each encodable type.
+    for (var feature : features) {
+      feature
+              .findProperty(columnName)
+              .map(property -> property.getValue(feature.getIndex()))
+              .ifPresent(value -> collectUniqueMapValues(value, uniqueValues, columnName));
+    }
+
+    // Now that all the values are collected and their final order established, assign indexes for encoding
+    uniqueValues.assignIndexes();
+
+    // Flatten each property into a list of integers
+    final var flattenedMapData = flattenMapValues(features, columnName, uniqueValues);
+    assert flattenedMapData.featureValueCounts().size() == features.size();
+    assert flattenedMapData.flattenedValues().stream().allMatch(Objects::nonNull);
+
+    // If all maps are empty, we can skip writing data streams and just write a zero stream count
+    if (flattenedMapData.allEmpty()) {
+      return new ArrayList<>(List.of(new byte[]{0}));
+    }
+
+    final var maxNumStreams = 15;
+    final var encodedStreams = new ArrayList<byte[]>(maxNumStreams);
+    encodedStreams.add(null); // placeholder for stream count
+    encodedStreams.add(new byte[] { (byte)uniqueValues.dictionaryPresenceMask() });
+
+    // Encode the length stream, the only mandatory one
+    var numStreams = 1;
+    encodedStreams.addAll(
+        IntegerEncoder.encodeIntStream(
+            flattenedMapData.featureValueCounts(),
+            physicalLevelTechnique,
+            false,
+            PhysicalStreamType.LENGTH,
+            null, encodingOption));
+
+    // Encode the non-empty unique dictionaries and the flattened/count streams
+    if (!uniqueValues.uniqueStringValues().isEmpty()) {
+      final var encoded =
+          StringEncoder.encode(
+              uniqueValues.uniqueStringValues().keySet(),
+              physicalLevelTechnique,
+              useFSST /*encodingOption?*/);
+      numStreams += encoded.getLeft();
+      encodedStreams.addAll(encoded.getRight());
+    }
+    if (!uniqueValues.uniqueBooleanValues().isEmpty()) {
+      encodedStreams.addAll(
+          BooleanEncoder.encodeBooleanStream(
+              uniqueValues.uniqueBooleanValues().keySet(),
+              PhysicalStreamType.DATA));
+      numStreams++;
+    }
+    if (!uniqueValues.uniqueInt32Values().isEmpty()) {
+      encodedStreams.addAll(
+          IntegerEncoder.encodeIntStream(
+              uniqueValues.uniqueInt32Values().keySet(),
+              physicalLevelTechnique,
+              true,
+              PhysicalStreamType.DATA,
+              null, encodingOption));
+      numStreams++;
+    }
+
+    if (!uniqueValues.uniqueUInt32Values().isEmpty()) {
+      encodedStreams.addAll(
+          IntegerEncoder.encodeIntStream(
+                  uniqueValues.uniqueUInt32Values().keySet().stream().mapToInt(U32::intValue),
+              physicalLevelTechnique,
+              false,
+              PhysicalStreamType.DATA,
+              null, encodingOption));
+      numStreams++;
+    }
+    if (!uniqueValues.uniqueInt64Values().isEmpty()) {
+      encodedStreams.addAll(
+          IntegerEncoder.encodeLongStream(uniqueValues.uniqueInt64Values().keySet(),
+              true,
+              PhysicalStreamType.DATA,
+              null, encodingOption));
+      numStreams++;
+    }
+    if (!uniqueValues.uniqueUInt64Values().isEmpty()) {
+      encodedStreams.addAll(
+          IntegerEncoder.encodeLongStream(
+                  uniqueValues.uniqueUInt64Values().keySet().stream().mapToLong(U64::longValue),
+              false,
+              PhysicalStreamType.DATA,
+              null, encodingOption));
+      numStreams++;
+    }
+    if (!uniqueValues.uniqueFloatValues().isEmpty()) {
+      encodedStreams.addAll(
+          FloatEncoder.encodeFloatStream(uniqueValues.uniqueFloatValues().keySet()));
+      numStreams++;
+    }
+    if (!uniqueValues.uniqueDoubleValues().isEmpty()) {
+      encodedStreams.addAll(
+          DoubleEncoder.encodeDoubleStream(uniqueValues.uniqueDoubleValues().keySet()));
+      numStreams++;
+    }
+
+    // Encode the presence stream, if applicable
+    if (flattenedMapData.anyEmpty()) {
+      encodedStreams.addAll(
+      BooleanEncoder.encodeBooleanStream(
+              flattenedMapData.featurePresentValues(),
+              PhysicalStreamType.PRESENT));
+      numStreams++;
+    }
+
+    // Encode the values stream, if there are any values
+    if (!flattenedMapData.flattenedValues().isEmpty()) {
+      encodedStreams.addAll(
+          IntegerEncoder.encodeIntStream(
+              flattenedMapData.flattenedValues(),
+              physicalLevelTechnique,
+              false,
+              PhysicalStreamType.DATA,
+              null));
+      numStreams++;
+    }
+
+    encodedStreams.set(0, EncodingUtils.encodeVarint(numStreams, false));
+    return encodedStreams;
+  }
+
+  enum SpecialMapValue {
+    NULL(0),
+    START_MAP(1), /// indicates the value is a nested map rather than a scalar, followed by nested payload length and payload values
+    START_LIST(2), /// indicates the value is a list rather than a scalar, followed by payload length and payload values
+    COUNT(3);
+
+    SpecialMapValue(int value) {
+      this.value = value;
+    }
+    final int value;
+  }
+
+  /// Holds the sorted unique values for each encodable type for a map property column and their corresponding indexes
+  // TODO: Better to combine [u]int32/64 values and encode everything as 64-bit if anything needs it?
+  private record UniqueMapValues(
+      @NotNull TreeMap<String, Integer> uniqueStringValues,
+      @NotNull TreeMap<Boolean, Integer> uniqueBooleanValues,
+      @NotNull TreeMap<Integer, Integer> uniqueInt32Values,
+      @NotNull TreeMap<U32, Integer> uniqueUInt32Values,
+      @NotNull TreeMap<Long, Integer> uniqueInt64Values,
+      @NotNull TreeMap<U64, Integer> uniqueUInt64Values,
+      @NotNull TreeMap<Float, Integer> uniqueFloatValues,
+      @NotNull TreeMap<Double, Integer> uniqueDoubleValues) {
+    private static final int MASK_STRING = 1;
+    private static final int MASK_BOOLEAN = 1 << 1;
+    private static final int MASK_INT32 = 1 << 2;
+    private static final int MASK_UINT32 = 1 << 3;
+    private static final int MASK_INT64 = 1 << 4;
+    private static final int MASK_UINT64 = 1 << 5;
+    private static final int MASK_FLOAT = 1 << 6;
+    private static final int MASK_DOUBLE = 1 << 7;
+
+    UniqueMapValues() {
+      this(
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>(),
+          new TreeMap<>());
+    }
+
+    /// Once all values are collected, assign an index to each.
+    void assignIndexes() {
+      var start = SpecialMapValue.COUNT.value;
+      start = assignIndexes(uniqueStringValues, start);
+      start = assignIndexes(uniqueBooleanValues, start);
+      start = assignIndexes(uniqueInt32Values, start);
+      start = assignIndexes(uniqueUInt32Values, start);
+      start = assignIndexes(uniqueInt64Values, start);
+      start = assignIndexes(uniqueUInt64Values, start);
+      start = assignIndexes(uniqueFloatValues, start);
+      assignIndexes(uniqueDoubleValues, start);
+    }
+
+    private static <T> int assignIndexes(@NotNull TreeMap<T, Integer> values, int startIndex) {
+      for (final var entry : values.entrySet()) {
+        entry.setValue(startIndex++);
+      }
+      return startIndex;
+    }
+
+    /// Calculate the mask indicating which value streams are written
+    int dictionaryPresenceMask() {
+      return 
+          ((!uniqueStringValues.isEmpty() ? MASK_STRING : 0)
+              | (!uniqueBooleanValues.isEmpty() ? MASK_BOOLEAN : 0)
+              | (!uniqueInt32Values.isEmpty() ? MASK_INT32 : 0)
+              | (!uniqueUInt32Values.isEmpty() ? MASK_UINT32 : 0)
+              | (!uniqueInt64Values.isEmpty() ? MASK_INT64 : 0)
+              | (!uniqueUInt64Values.isEmpty() ? MASK_UINT64 : 0)
+              | (!uniqueFloatValues.isEmpty() ? MASK_FLOAT : 0)
+              | (!uniqueDoubleValues.isEmpty() ? MASK_DOUBLE : 0));
+    }
+  }
+
+  private record FlattenedMapData(
+      @NotNull ArrayList<Integer> flattenedValues,
+      @NotNull ArrayList<Integer> featureValueCounts,
+    @NotNull ArrayList<Boolean> featurePresentValues,
+  boolean anyEmpty, boolean allEmpty) {}
+
+  /// Walk the values for each feature, building a flattened list of value indexes for all features
+  private static FlattenedMapData flattenMapValues(
+      @NotNull final SequencedCollection<Feature> features,
+      @NotNull final String columnName,
+      @NotNull final UniqueMapValues uniqueValues) {
+    final var estimatedValuesPerFeature = 10;
+    final var flattenedValues = new ArrayList<Integer>(estimatedValuesPerFeature * features.size());
+    final var featureValueCounts = new ArrayList<Integer>(features.size());
+    final var featurePresentValues = new ArrayList<Boolean>(features.size());
+    boolean anyEmpty = false;
+    boolean allEmpty = true;
+
+    for (final var feature : features) {
+      final var startIndex = flattenedValues.size();
+      feature
+          .findProperty(columnName)
+          .map(property -> property.getValue(feature.getIndex()))
+          .ifPresent(value -> appendMapEntries(value, flattenedValues, uniqueValues, columnName));
+      final var featureValueCount = flattenedValues.size() - startIndex;
+      if (featureValueCount > 0) {
+        featureValueCounts.add(featureValueCount);
+        allEmpty = false;
+      } else {
+        anyEmpty = true;
+      }
+      featurePresentValues.add(featureValueCount > 0);
+    }
+
+    return new FlattenedMapData(flattenedValues, featureValueCounts, featurePresentValues, anyEmpty, allEmpty);
+  }
+
+  private static void appendMapEntries(
+      @Nullable final Object value,
+      @NotNull final ArrayList<Integer> flattenedValues,
+      @NotNull final UniqueMapValues uniqueValues,
+      @NotNull final String columnName) {
+    if (value == null) {
+      return;
+    }
+    if (!(value instanceof Map<?, ?> mapValue)) {
+      throw new IllegalArgumentException(
+          "Expected top-level map property value in column '"
+              + columnName
+              + "' but found "
+              + value.getClass().getName());
+    }
+
+    for (final var entry : mapValue.entrySet()) {
+      if (entry.getKey() == null) {
+        throw new IllegalArgumentException(
+            "Nested map entry has null key in column '" + columnName + "'");
+      }
+
+      flattenedValues.add(
+          getScalarIndex(uniqueValues.uniqueStringValues(), entry.getKey().toString(), columnName));
+      appendMapEntryValue(entry.getValue(), flattenedValues, uniqueValues, columnName);
+    }
+  }
+
+  private static void appendMapEntryValue(
+      @Nullable Object value,
+      @NotNull final ArrayList<Integer> flattenedValues,
+      @NotNull final UniqueMapValues uniqueValues,
+      @NotNull final String columnName) {
+    switch (value) {
+      case null -> flattenedValues.add(SpecialMapValue.NULL.value);
+      case Map<?, ?> nestedMap -> {
+        appendMapValue(nestedMap, flattenedValues, uniqueValues, columnName);
+      }
+      case Iterable<?> iterable -> appendListValue(iterable, flattenedValues, uniqueValues, columnName);
+      default -> flattenedValues.add(getScalarIndex(value, uniqueValues, columnName));
+    }
+  }
+
+  private static void appendMapValue(
+      @NotNull final Map<?, ?> mapValue,
+      @NotNull final ArrayList<Integer> flattenedValues,
+      @NotNull final UniqueMapValues uniqueValues,
+      @NotNull final String columnName) {
+    final var startIndex = flattenedValues.size();
+    flattenedValues.add(SpecialMapValue.START_MAP.value);
+    flattenedValues.add(0); // size not known yet, will be updated after payload is added
+    appendMapEntries(mapValue, flattenedValues, uniqueValues, columnName);
+    flattenedValues.set(startIndex + 1, flattenedValues.size() - startIndex);
+  }
+
+  private static void appendListValue(
+      @NotNull final Iterable<?> iterable,
+      @NotNull final ArrayList<Integer> flattenedValues,
+      @NotNull final UniqueMapValues uniqueValues,
+      @NotNull final String columnName) {
+    final var startIndex = flattenedValues.size();
+    flattenedValues.add(SpecialMapValue.START_LIST.value);
+    flattenedValues.add(0); // size not known yet, will be updated after payload is added
+    iterable.forEach(item -> appendListItemValue(item, flattenedValues, uniqueValues, columnName));
+    flattenedValues.set(startIndex + 1, flattenedValues.size() - startIndex);
+  }
+
+  private static void appendListItemValue(
+      @Nullable final Object item,
+      @NotNull final ArrayList<Integer> listValueIndexes,
+      @NotNull final UniqueMapValues uniqueValues,
+      @NotNull final String columnName) {
+    switch (item) {
+      case null -> listValueIndexes.add(SpecialMapValue.NULL.value);
+      case Map<?, ?> nestedMap -> appendMapValue(nestedMap, listValueIndexes, uniqueValues, columnName);
+      case Iterable<?> nestedList -> appendListValue(nestedList, listValueIndexes, uniqueValues, columnName);
+      default -> listValueIndexes.add(getScalarIndex(item, uniqueValues, columnName));
+    }
+  }
+
+  /// Find the index of a scalar value within the combined set of unique values
+  private static int getScalarIndex(
+      @NotNull final Object value, @NotNull final UniqueMapValues uniqueValues, @NotNull final String columnName) {
+    return switch (value) {
+      case Boolean boolValue ->
+        getScalarIndex(uniqueValues.uniqueBooleanValues(), boolValue, columnName);
+      case U8 u8Value ->
+        getScalarIndex(uniqueValues.uniqueUInt32Values(), U32.of(u8Value.intValue()), columnName);
+      case Integer intValue -> getScalarIndex(uniqueValues.uniqueInt32Values(), intValue, columnName);
+      case U32 u32Value -> getScalarIndex(uniqueValues.uniqueUInt32Values(), u32Value, columnName);
+      case Long longValue -> getScalarIndex(uniqueValues.uniqueInt64Values(), longValue, columnName);
+      case U64 u64Value -> getScalarIndex(uniqueValues.uniqueUInt64Values(), u64Value, columnName);
+      case Float floatValue -> getScalarIndex(uniqueValues.uniqueFloatValues(), floatValue, columnName);
+      case Double doubleValue -> getScalarIndex(uniqueValues.uniqueDoubleValues(), doubleValue, columnName);
+      case String stringValue -> getScalarIndex(uniqueValues.uniqueStringValues(), stringValue, columnName);
+      default ->
+          throw new IllegalArgumentException(
+              "Unsupported nested map property value type in column '"
+                  + columnName
+                  + "': "
+                  + value.getClass().getName());
+    };
+  }
+
+  private static <T> int getScalarIndex(@NotNull final Map<T, Integer> indexes, @NotNull final T value, @NotNull final String columnName) {
+    final var index = indexes.get(value);
+    if (index == null) {
+      throw new IllegalArgumentException(
+          "Value missing from nested map dictionary in column '" + columnName + "': " + value);
+    }
+    return index;
+  }
+
+  /// Recursively walk a nested map property value, collecting all the unique scalars used as key and leaf values.
+  /// Indexes cannot be established yet, so all are set to zero.
+  private static void collectUniqueMapValues(
+      @Nullable final Object value, @NotNull final UniqueMapValues uniqueValues, @NotNull final String columnName) {
+    switch (value) {
+      case null -> {
+        // nulls are encoded as control markers, not dictionary values
+      }
+      case Map<?, ?> map -> {
+        for (final var entry : map.entrySet()) {
+          if (entry.getKey() != null) {
+            uniqueValues.uniqueStringValues().putIfAbsent(entry.getKey().toString(), 0);
+          }
+          collectUniqueMapValues(entry.getValue(), uniqueValues, columnName);
+        }
+      }
+      case Iterable<?> iterable ->
+        iterable.forEach(i -> collectUniqueMapValues(i, uniqueValues, columnName));
+      case Boolean boolValue -> uniqueValues.uniqueBooleanValues().putIfAbsent(boolValue, 0);
+      case U8 u8Value -> uniqueValues.uniqueUInt32Values().putIfAbsent(U32.of(u8Value.intValue()), 0);
+      case Integer intValue -> uniqueValues.uniqueInt32Values().putIfAbsent(intValue, 0);
+      case U32 u32Value -> uniqueValues.uniqueUInt32Values().putIfAbsent(u32Value, 0);
+      case Long longValue -> uniqueValues.uniqueInt64Values().putIfAbsent(longValue, 0);
+      case U64 u64Value -> uniqueValues.uniqueUInt64Values().putIfAbsent(u64Value, 0);
+      case Float floatValue -> uniqueValues.uniqueFloatValues().putIfAbsent(floatValue, 0);
+      case Double doubleValue -> uniqueValues.uniqueDoubleValues().putIfAbsent(doubleValue, 0);
+      case String stringValue -> uniqueValues.uniqueStringValues().putIfAbsent(stringValue, 0);
+      default ->
+          throw new IllegalArgumentException(
+              "Unsupported nested map property value type in column '"
+                  + columnName
+                  + "': "
+                  + value.getClass().getName());
+    }
   }
 }
